<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_new_chat"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/menu_new_chat"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_conversations"
        android:title="@string/menu_conversations"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_status"
        android:title="@string/menu_status"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_clear_chat"
        android:title="@string/menu_clear_chat"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>
